#40 refactor: update swagger doc, add run.sh script and update returning value of GetByShortURL
